# ROS2_rUBot_mecanum_ws

src/my_robot_bringup/launch/: my_robot_bringup_sw.launch.xml
src/my_robot_bringup/worlds/: group4_custom.world
src/my_robot_control/: CMakeLists.txt  setup.py
src/my_robot_control/my_robot_control/: my_robot_lidar_test_rUBot.py
src/my_robot_description/urdf/rubot/: rubot_mecanum_custom.urdf  rubot_mecanum_custom_v1.urdf
web/: index_final_auto3.html
