cmake_minimum_required(VERSION 3.8)
project(my_robot_control)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

find_package(ament_cmake REQUIRED)

# Instalar los archivos necesarios
install(
  DIRECTORY config launch my_robot_control resource test
  DESTINATION share/${PROJECT_NAME}/
)

ament_package()